Add and update unit tests for Sale Service